--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -41,10 +41,13 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Python tools (tensorflow-cpu, tensorflowjs)
+      - name: Install Python tools (tensorflow-cpu, JAX, tensorflowjs)
         run: |
           python -m pip install --upgrade pip
-          pip install tensorflow-cpu==2.12.0 tensorflowjs==4.9.0
+          pip install tensorflow-cpu==2.12.0
+          # Install CPU version of JAX compatible with tensorflowjs
+          pip install "jax[cpu]==0.4.13" jaxlib==0.4.13+cpu -f https://storage.googleapis.com/jax-releases/jax_releases.html
+          pip install tensorflowjs==4.9.0
 
       - name: Clone google/dynamicworld (shallow)
         run: |
