--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -45,8 +45,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install tensorflow-cpu==2.12.0
-          # Install CPU version of JAX compatible with tensorflowjs
-          pip install "jax[cpu]==0.4.13" jaxlib==0.4.13+cpu -f https://storage.googleapis.com/jax-releases/jax_releases.html
+          # Fixed JAX install for Python 3.10
+          pip install "jax[cpu]==0.4.13" jaxlib==0.4.13 -f https://storage.googleapis.com/jax-releases/jax_releases.html
           pip install tensorflowjs==4.9.0
 
       - name: Clone google/dynamicworld (shallow)
