--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -44,8 +44,9 @@ jobs:
       - name: Install Python tools (tensorflow-cpu, JAX, tensorflowjs)
         run: |
           python -m pip install --upgrade pip
+          pip install "numpy<2"                    # Force NumPy 1.x to fix TFJS conversion
           pip install tensorflow-cpu==2.12.0
-          # Downgrade JAX to fix shape_poly import issue
+          # Downgrade JAX to 0.4.12 to fix shape_poly import issue
           pip install "jax[cpu]==0.4.12" jaxlib==0.4.12 -f https://storage.googleapis.com/jax-releases/jax_releases.html
           pip install tensorflowjs==4.9.0
 
