--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -41,13 +41,14 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Python tools (tensorflow-cpu, JAX, tensorflowjs)
+      - name: Install Python tools (TensorFlow, JAX, TFJS)
         run: |
           python -m pip install --upgrade pip
-          pip install "numpy<2"                    # Force NumPy 1.x to fix TFJS conversion
+          # Force NumPy <2 to avoid TFJS + NumPy 2 incompatibility
+          pip install "numpy<2"
           pip install tensorflow-cpu==2.12.0
-          # Downgrade JAX to 0.4.12 to fix shape_poly import issue
-          pip install "jax[cpu]==0.4.12" jaxlib==0.4.12 -f https://storage.googleapis.com/jax-releases/jax_releases.html
+          # Downgrade JAX to 0.4.10 for shape_poly compatibility with TFJS
+          pip install "jax[cpu]==0.4.10" jaxlib==0.4.10 -f https://storage.googleapis.com/jax-releases/jax_releases.html
           pip install tensorflowjs==4.9.0
 
       - name: Clone google/dynamicworld (shallow)
