--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -41,14 +41,11 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Python tools (TensorFlow, JAX, TFJS)
+      - name: Install Python tools (TensorFlow, TFJS)
         run: |
           python -m pip install --upgrade pip
-          # Force NumPy <2 to avoid TFJS + NumPy 2 incompatibility
-          pip install "numpy<2"
+          pip install "numpy<2"                    # Force NumPy 1.x to avoid TFJS incompatibility
           pip install tensorflow-cpu==2.12.0
-          # Downgrade JAX to 0.4.10 for shape_poly compatibility with TFJS
-          pip install "jax[cpu]==0.4.10" jaxlib==0.4.10 -f https://storage.googleapis.com/jax-releases/jax_releases.html
           pip install tensorflowjs==4.9.0
 
       - name: Clone google/dynamicworld (shallow)
