Refactor GitHub Actions workflow for DynamicWorld

--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -31,27 +31,27 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Ensure Node (for verification)
+      - name: Ensure Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Set up Python 3.10
+      - name: Setup Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install Python tools (TensorFlow, TFJS)
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "numpy<2"                    # Force NumPy 1.x to avoid TFJS incompatibility
+          pip install "numpy<2"
           pip install tensorflow-cpu==2.12.0
           pip install tensorflowjs==4.9.0
 
-      - name: Clone google/dynamicworld (shallow)
+      - name: Clone DynamicWorld repo
         run: |
-          git clone --depth 1 https://github.com/google/dynamicworld.git dynamicworld || (echo "clone failed" && exit 1)
-          ls -la dynamicworld || true
+          git clone --depth 1 https://github.com/google/dynamicworld.git dynamicworld
+          ls -la dynamicworld
 
       - name: Make conversion script executable
         run: chmod +x .github/scripts/convert_dynamicworld.sh
@@ -61,7 +61,12 @@ jobs:
           SAVEDMODEL_PATH: ${{ github.event.inputs.forward_savedmodel_path }}
           OUTPUT_PATH: ${{ github.event.inputs.forward_output_path }}
         run: |
-          .github/scripts/convert_dynamicworld.sh dynamicworld/${SAVEDMODEL_PATH} ${OUTPUT_PATH} || (echo "forward conversion failed" && exit 1)
+          tensorflowjs_converter \
+            --input_format=tf_saved_model \
+            --signature_name=serving_default \
+            --saved_model_tags=serve \
+            dynamicworld/${SAVEDMODEL_PATH} \
+            ${OUTPUT_PATH} || (echo "forward conversion failed" && exit 1)
 
       - name: Convert backward SavedModel -> TFJS
         env:
@@ -69,47 +74,48 @@ jobs:
           OUTPUT_PATH: ${{ github.event.inputs.backward_output_path }}
         run: |
           if [ -d "dynamicworld/${SAVEDMODEL_PATH}" ]; then
-            .github/scripts/convert_dynamicworld.sh dynamicworld/${SAVEDMODEL_PATH} ${OUTPUT_PATH} || echo "backward conversion failed"
+            tensorflowjs_converter \
+              --input_format=tf_saved_model \
+              --signature_name=serving_default \
+              --saved_model_tags=serve \
+              dynamicworld/${SAVEDMODEL_PATH} \
+              ${OUTPUT_PATH} || echo "backward conversion failed"
           else
             echo "Backward model path not present, skipping"
           fi
 
-      - name: Add verify script and install tfjs-node for verification
+      - name: Add verify script and install tfjs-node
         run: |
           cp .github/scripts/verify_tfjs_model.js server/verify_tfjs_model.js
           npm install @tensorflow/tfjs-node@5.1.0 --prefix server
 
-      - name: Verify forward TFJS model (quick)
+      - name: Verify forward TFJS model
         run: |
           if [ -f ${{ github.event.inputs.forward_output_path }}/model.json ]; then
             node server/verify_tfjs_model.js ${{ github.event.inputs.forward_output_path }}/model.json || echo "verify forward failed (non-fatal)"
-          else
-            echo "forward model.json not found; skipping verify"
           fi
 
-      - name: Verify backward TFJS model (quick)
+      - name: Verify backward TFJS model
         run: |
           if [ -f ${{ github.event.inputs.backward_output_path }}/model.json ]; then
             node server/verify_tfjs_model.js ${{ github.event.inputs.backward_output_path }}/model.json || echo "verify backward failed (non-fatal)"
-          else
-            echo "backward model.json not found; skipping verify"
           fi
 
-      - name: Show sizes of converted directories
+      - name: Show sizes
         run: |
           du -sh server/models/dynamicworld/* || true
           find server/models/dynamicworld -maxdepth 3 -type f -printf "%p %s\n" | head -n 30 || true
 
-      - name: Commit converted TFJS files back to repo (optional)
+      - name: Commit TFJS models (optional)
         if: ${{ github.event.inputs.commit_changes == 'true' }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add server/models/dynamicworld || true
-          git commit -m "Add converted Dynamic World TFJS models (forward/backward) [ci conversion]" || echo "nothing to commit"
+          git add server/models/dynamicworld
+          git commit -m "Add converted DynamicWorld TFJS models [ci]" || echo "nothing to commit"
           git push origin HEAD:${{ github.ref_name || github.head_ref || github.ref }} || echo "push failed"
 
-      - name: Upload converted TFJS as artifacts (recommended if not committing)
+      - name: Upload TFJS artifacts if not committing
         if: ${{ github.event.inputs.commit_changes != 'true' }}
         uses: actions/upload-artifact@v4
         with:
