--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -46,7 +46,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install "numpy<2"
           pip install tensorflow-cpu==2.12.0
-          pip install tensorflowjs==4.8.0  # TFJS without JAX dependency
+          pip install tensorflowjs==4.8.0  # key: no JAX dependency
 
       - name: Clone DynamicWorld
         run: |
