--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -1,4 +1,4 @@
-name: Convert DynamicWorld
+name: Convert DynamicWorld TFJS
 
 on:
   workflow_dispatch:
@@ -11,16 +11,12 @@ on:
         description: "Relative path to backward SavedModel"
         required: false
         default: "model/backward"
-      commit_changes:
-        description: "Commit converted TFJS back to repo?"
-        required: true
-        default: "false"
       forward_output_path:
-        description: "Custom output directory for forward TFJS model"
+        description: "Output directory for forward TFJS model"
         required: false
         default: "server/models/dynamicworld/forward"
       backward_output_path:
-        description: "Custom output directory for backward TFJS model"
+        description: "Output directory for backward TFJS model"
         required: false
         default: "server/models/dynamicworld/backward"
 
@@ -29,59 +25,47 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Setup Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install Python dependencies
+      - name: Pull Docker image with TensorFlow
         run: |
-          python -m pip install --upgrade pip
-          pip install "numpy<2" tensorflow-cpu==2.12.0 tensorflowjs==4.8.0
-
-      - name: Clone DynamicWorld
-        run: |
-          git clone --depth 1 https://github.com/google/dynamicworld.git dynamicworld
+          docker pull tensorflow/tensorflow:2.12.0
 
       - name: Convert forward SavedModel -> TFJS
         env:
           SAVEDMODEL_PATH: ${{ github.event.inputs.forward_savedmodel_path }}
           OUTPUT_PATH: ${{ github.event.inputs.forward_output_path }}
         run: |
-          echo "Converting forward model..."
-          if [ -d "dynamicworld/${SAVEDMODEL_PATH}" ]; then
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+            tensorflow/tensorflow:2.12.0 bash -c "\
+            pip install --upgrade pip && \
+            pip install 'numpy<2' tensorflowjs==3.18.0 && \
             tensorflowjs_converter \
               --input_format=tf_saved_model \
               --signature_name=serving_default \
               --saved_model_tags=serve \
-              dynamicworld/${SAVEDMODEL_PATH} \
-              ${OUTPUT_PATH} || (echo "Forward conversion failed!" && exit 1)
-          else
-            echo "Forward model path not found!"
-            exit 1
-          fi
+              $SAVEDMODEL_PATH \
+              $OUTPUT_PATH \
+            "
 
       - name: Convert backward SavedModel -> TFJS
         env:
           SAVEDMODEL_PATH: ${{ github.event.inputs.backward_savedmodel_path }}
           OUTPUT_PATH: ${{ github.event.inputs.backward_output_path }}
         run: |
-          if [ -d "dynamicworld/${SAVEDMODEL_PATH}" ]; then
-            echo "Converting backward model..."
-            tensorflowjs_converter \
-              --input_format=tf_saved_model \
-              --signature_name=serving_default \
-              --saved_model_tags=serve \
-              dynamicworld/${SAVEDMODEL_PATH} \
-              ${OUTPUT_PATH} || echo "Backward conversion failed!"
+          if [ -d "${{ github.workspace }}/$SAVEDMODEL_PATH" ]; then
+            docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace \
+              tensorflow/tensorflow:2.12.0 bash -c "\
+              pip install --upgrade pip && \
+              pip install 'numpy<2' tensorflowjs==3.18.0 && \
+              tensorflowjs_converter \
+                --input_format=tf_saved_model \
+                --signature_name=serving_default \
+                --saved_model_tags=serve \
+                $SAVEDMODEL_PATH \
+                $OUTPUT_PATH \
+              "
           else
             echo "Backward model path not present, skipping"
           fi
