--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -10,15 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout your repo
+      # Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Setup Python
+      # Setup Python (fixed version)
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: 3.10  # <-- changed from 3.1 to 3.10
 
       # Install dependencies
       - name: Install dependencies
