--- a/.github/workflows/convert-dynamicworld.yml
+++ b/.github/workflows/convert-dynamicworld.yml
@@ -25,9 +25,10 @@ jobs:
       - name: Upgrade pip
         run: pip install --upgrade pip
 
-      # 4. Install required packages
+      # 4. Install required Python packages with compatible numpy
       - name: Install required Python packages
         run: |
+          pip install "numpy<1.24"
           pip install tensorflow==2.13.1 tensorflowjs==3.18.0 tensorflow-hub==0.12.0 protobuf==3.20.3
 
       # 5. Check if dynamicworld/model exists
