--- a/server/package.json
+++ b/server/package.json
@@ -2,20 +2,21 @@
   "name": "eagle-server",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon index.js --watch . --ext js,json",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
-    "@tensorflow/tfjs-node": "^5.1.0",
-    "axios": "^1.5.0",
-    "body-parser": "^1.20.2",
+    "@tensorflow/tfjs": "^4.8.0",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "openai": "^4.6.0",
-    "node-fetch": "^3.3.2"
+    "eagle-lens": "file:..",
+    "express": "^4.21.2",
+    "openai": "^6.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.0"
   }
 }
